fix mealcard tag vertical align

--- a/src/components/MealCard/MealCard.module.scss
+++ b/src/components/MealCard/MealCard.module.scss
@@ -104,10 +104,6 @@
       }
     }
 
-    > * {
-      vertical-align: middle;
-    }
-
     &.featured {
       color: $cookunity-white;
       background-color: #4d4d4f;
